# dominator

./: .gitignore  README.md  main.py  pyproject.toml  spec.md
psycho_pass/: analyze.py  dominator.py
