[project]
name = "dominator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.99",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "tf-keras>=2.21.0",
    "ultralytics>=8.4.24",
    "yt-dlp>=2026.3.17",
]
